--- a/app.json
+++ b/app.json
@@ -25,6 +25,21 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router", "expo-sqlite"]
+    "plugins": [
+      "expo-router",
+      "expo-sqlite"
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "3e1b9c66-aef7-4bcf-b70c-1a9c74bd59e8"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/3e1b9c66-aef7-4bcf-b70c-1a9c74bd59e8"
+    }
   }
 }
