--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "jest --coverage --watchAll"
   },
   "dependencies": {
-    "expo": "~53.0.9",
+    "expo": "^54.0.0",
     "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
